--- a/aggregator-service/src/main/resources/application.properties
+++ b/aggregator-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=7072
 spring.application.name=aggregator-service
 
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 
 user.service.url=http://localhost:7070
